[package]
name = "license-key"
version = "0.1.0"
authors = ["Patrik Svensson <patrik@patriksvensson.se>"]
description = "A library that makes signaling between threads a bit more ergonomic."
license = "MIT"
repository = "https://github.com/patriksvensson/license-key"
keywords = ["license", "license key", "software license"]
edition = "2018"

[dependencies]
hex = "0.4.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "generator"
harness = false